--- a/client/package.json
+++ b/client/package.json
@@ -36,7 +36,9 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-spring": "9.0.0-rc.3",
+    "react-use-gesture": "latest",
     "redux": "^4.0.5",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.7"
   }
 }
